Correction routage React 18 (createroot) + animations collapse du about (+responsive) + ajout des classes selon state (composant collapse)

--- a/src/style/collapse.scss
+++ b/src/style/collapse.scss
@@ -26,10 +26,11 @@
 .collapse {
     margin-top: 25px;
     border: none;
-    overflow: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow: hidden;
+
     &__button {
       width: 85%;
       padding: 12px;
@@ -42,34 +43,56 @@
       cursor: pointer;
       border: none;
       outline: none;
+
       @media (max-width: 767.98px) {
         width: 92%;
         height: 30px;
         font-size: 14px;
         }
     }
-  }
-  
-  .collapse__icon {
-    font-size: 32px;
-    transition: transform 0.3s;
-    transform: rotate(0deg);
-    @media (max-width: 767.98px) {
-      font-size: 13px;
-      }
+    &__icon {
+      font-size: 32px;
+
+      @media (max-width: 767.98px) {
+        font-size: 13px;
+        }
+        &.collapsed {
+          transition: all 0.5s ease-in-out;
+          transform: rotate(0deg);
+        }
+
+        &.expanded {
+          transition: all 0.5s ease-in-out;
+          transform: rotate(-180deg);
+        }
     }
   
-  .expanded .collapse__icon {
-    transform: rotate(180deg);
-  }
+    &__content {
+      width: 85%;
+      opacity:0;
+      max-height: 0;
+      margin: 0 auto;
+      text-align:left;
+      padding: 12px;
+      color: #FF6060;
+      border-radius: 5px;
+      transition: all 0.5s ease-in-out;
+
+      @media (max-width: 767.98px) {
+        padding:0;
+        font-size:14px;
+      }  
+      &.expanded {
+        max-height: 100px;
+        opacity: 1;
+        transition: all 0.7s ease-in-out;
+        padding:5px;
+        
+      }
+    }
+
+}
   
-  .collapse__content {
-    width: 85%;
-    margin: 0 auto;
-    text-align:left;
-    padding: 12px;
-    color: #FF6060;
-    border-radius: 5px;
-  }
+
 
 
