--- a/src/style/fichelogement.scss
+++ b/src/style/fichelogement.scss
@@ -25,6 +25,7 @@
                 top: 230px;
                 left: 50px;
                 font-size: 150px;
+                cursor:pointer;
                 @media (max-width: 767.98px) {
                     font-size: 45px;
                     top: 200px;
@@ -40,6 +41,7 @@
                 top: 230px;
                 right: 50px;
                 font-size: 150px;
+                cursor:pointer;
                 @media (max-width: 767.98px) {
                     font-size: 45px;
                     top: 200px;
